feat: Enhance uploading process, improve profile page, and add api endpoints
- Improved profile pic display (made sure to make it appear as circle by using clip-path)
- Added lyrics modal to display and edit the content of the lyrics in the dashboard
- Added engaging loaders while uploading and showing lyrics modal
- Added API endpoints for handling API requests
- Improved music uploading process

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -109,6 +109,14 @@
 	color: #5e8de7;
 }
 
+.profile-pic {
+	width: 30px;
+	height: 30px;
+	clip-path: circle();
+	object-fit: cover;
+	object-position: center;
+}
+
 .play-icon-container {
 	/* display: none; */
 	/* visibility: none; */
