--- a/src/views/dashboard/upload.ejs
+++ b/src/views/dashboard/upload.ejs
@@ -147,9 +147,12 @@
 
 <div class="modal-dialog">
 	<div class="spinner-overlay" style="display: none">
-		<div class="spinner-border text-primary spinner" role="status">
-			<span class="sr-only">Loading...</span>
+		<div class="loader-dancing">
+
 		</div>
+		<!-- <div class="spinner-border text-primary spinner" role="status">
+			<span class="sr-only">Loading...</span>
+		</div> -->
 	</div>
 
 	<form id="upload-form" class="upload-container modal-content">
@@ -193,16 +196,16 @@
 						<input name="video-upload" class="drop-browse" type="file" accept="video/*" style="display: none">.
 					</span>
 					<input type="hidden" name="video" value="">
-					<div class="progress-container" style="display: none">
-						<div class="progress-bar"></div>
-						<div class="progress-text"></div>
-					</div>
 					<div class="file-details" style="display: none">
 						<i class="fas fa-file-video" data-fa-transform="shrink-3 down-2 left-6 rotate--45"></i>
 						<div class="file-name text-truncate" id="fileName"></div>
 						<span aria-hidden="true" class="cancel-upload">
 							<i class="fas fa-times"></i>
 						</span>
+					</div>
+					<div class="progress-container" style="display: none">
+						<div class="progress-bar"></div>
+						<div class="progress-text"></div>
 					</div>
 				</div>
 
@@ -214,16 +217,16 @@
 						<input class="drop-browse" type="file" name="lyrics-upload" accept="text/*" style="display: none">.
 					</span>
 					<input type="hidden" name="lyrics" value="">
-					<div class="progress-container" style="display: none">
-						<div class="progress-bar"></div>
-						<div class="progress-text"></div>
-					</div>
 					<div class="file-details" style="display: none">
 						<i class="fas fa-file-alt" data-fa-transform="shrink-3 down-2 left-6 rotate--45"></i>
 						<div class="file-name text-truncate" id="fileName"></div>
 						<span aria-hidden="true" class="cancel-upload">
 							<i class="fas fa-times"></i>
 						</span>
+					</div>
+					<div class="progress-container" style="display: none">
+						<div class="progress-bar"></div>
+						<div class="progress-text"></div>
 					</div>
 				</div>
 			</div>
