--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -45,7 +45,7 @@
 					</div>
 					<input type="hidden" name="thumbnail" value="">
 				</div>
-				<input type="file" name="files" accept="image/*" id="thumbnail-upload" style="display: none;">
+				<input type="file" name="thumbnail-upload" accept="image/*" id="thumbnail-upload" style="display: none;">
 				<div class="drag-drop artist-music-name">
 					<span>Unknown</span><span> - </span><span class="music-name">Track</span>
 					<!-- <span>Unknown</span> <br> <span class="music-name">Track</span> -->
@@ -68,7 +68,7 @@
 					<span>
 						<i class="fas fa-file-video" data-fa-transform="shrink-3 down-2 left-6 rotate--45"></i>
 						Drop video here, or <a href="javascript:void(0)">browse</a>
-						<input name="files" class="drop-browse" type="file" accept="video/*" style="display: none">.
+						<input name="video-upload" class="drop-browse" type="file" accept="video/*" style="display: none">.
 					</span>
 					<input type="hidden" name="video" value="">
 					<div class="progress-container" style="display: none">
@@ -89,7 +89,7 @@
 					<i class="fas fa-file-alt" data-fa-transform="shrink-3 down-2 left-6 rotate--45"></i>
 					<span>Drop Lyrics here, or <a href="javascript:void(0)">browse</a>
 						<!-- <input class="drop-browse" type="file" name="video" accept="text/*" style="display: none">. -->
-						<input class="drop-browse" type="file" name="files" accept="text/*" style="display: none">.
+						<input class="drop-browse" type="file" name="lyrics-upload" accept="text/*" style="display: none">.
 					</span>
 					<input type="hidden" name="lyrics" value="">
 					<div class="progress-container" style="display: none">
