--- a/public/css/funkey.css
+++ b/public/css/funkey.css
@@ -162,10 +162,11 @@ p {
   font-size: 14px;
   color: #fff;
   background-color: var(--brand-color);
+	background-color: #3B566E;
   padding: 12px 30px;
   display: inline-block;
-  border-radius: 25px;
-  font-weight: 400;
+  border-radius: 5px;
+  font-weight: bold;
   text-transform: capitalize;
   letter-spacing: 0.5px;
   transition: all .3s;
