--- a/src/views/lyrics/lyrics.ejs
+++ b/src/views/lyrics/lyrics.ejs
@@ -66,6 +66,11 @@
 		<%- include('stats.ejs') %>
 	</div>
 
+	<label for="volume" style="position: absolute; left: 50%; bottom: 1.5em; transform: translateX(-50%); color: #5e86e7; display: none;">
+	<input type="range" name="volume" id="volume" min="0" max="1" value="0.5">
+	<span style="font-size: 1.25rem; color: #f7f7f7;">50%</span>
+	</label>
+
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
